Fix tap state on ios

--- a/assets/styles/sass/global.scss
+++ b/assets/styles/sass/global.scss
@@ -189,6 +189,7 @@ button,
             }
 
             a {
+                display: block;
                 text-decoration: none;
 
                 &:before {
